remove containsKey to get